<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:padding="25sp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:paddingTop="40dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log_EnterEmail_Hint"
            android:textColorHint="@color/colorSurface"
            app:hintTextColor="@color/colorSurface"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSurface"
                android:id="@+id/emailEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log_EnterPassword_Hint"
            android:textColorHint="@color/colorSurface"
            app:hintTextColor="@color/colorSurface"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSurface"
                android:id="@+id/passwordEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_CreateAccount"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:onClick="goToRegistration"
        android:layout_above="@+id/loginButton"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/log_Login_Button" />

</RelativeLayout>